--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ target/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+test.bat
+codecrafters.yml
+your_program.sh
+.codecrafters
